<resources>
    <string name="app_name">English support</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_button">Search</string>
    <string name="pick_text">Pick a word!</string>
    <string name="merriam_api_key">392e3a89-a0cc-4dc6-90d6-716ecc138a2d</string>
    <string name="bing_api_key">0760420ad4b44aea943a85d37eaf9b7e</string>
    <string name="show_recent_words">Show recent words</string>
    <string name="show_last30_words">Show last 30 words</string>
    <string name="show_all_words">Show all words</string>
    <string name="no_content">No content</string>
    <string name="back_button"><![CDATA[<- Back]]></string>
    <string name="definition_text">Definition:</string>
    <string name="synonyms_text">Synonyms:</string>
    <string name="antonyms_text">Antonyms:</string>
    <string name="start_button">Let\'s get started</string>
    <string name="overview_text">This is an app to search a word using the voice feature or just typing. You can see the meaning,
        a list of synonyms and antonyms and if you click in the word, you can see a referenced image! It\'s true that the image is not the best one on the internet, but it helps to understand the word.</string>
    <string name="referenced_image">Referenced image for the word</string>
</resources>