<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/layout">

<data>
    <variable
        name="word"
        type="com.example.englishsupport.Word" />

    <variable
        name="wordCallback"
        type="com.example.englishsupport.WordClickListener" />

    <variable
        name="viewModel"
        type="com.example.englishsupport.ui.DashboardViewModel" />
</data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="@{() -> wordCallback.onClick(word)}"
        tools:context=".ui.details.WordFragment"
        app:layoutDescription="@xml/fragment_detail_scene">

        <TextView
            android:id="@+id/word_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@{word.word}"
            android:textSize="@dimen/main_word_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/definition_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:text="@string/definition_text"
            android:textSize="@dimen/definition_word_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/definition_text"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/definition_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/inside_vertical_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:text="@{word.definition}"
            android:textSize="@dimen/definition_word_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/definition_label"
            app:layout_constraintTop_toBottomOf="@+id/word_text" />

        <TextView
            android:id="@+id/synonyms_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:text="@string/synonyms_text"
            android:textSize="@dimen/definition_word_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/synonyms_text"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/synonyms_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/inside_vertical_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:text="@{word.synonyms}"
            android:textSize="@dimen/list_word_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/synonyms_label"
            app:layout_constraintTop_toBottomOf="@+id/definition_text" />

        <TextView
            android:id="@+id/antonyms_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:text="@string/antonyms_text"
            android:textSize="@dimen/definition_word_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/antonyms_text"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/antonyms_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/inside_vertical_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:text="@{word.antonyms}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/antonyms_label"
            app:layout_constraintTop_toBottomOf="@+id/synonyms_text" />

        <ImageView
            android:id="@+id/word_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toBottomOf="@+id/antonyms_text"
            app:layout_constraintBottom_toTopOf="@id/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/referenced_image" />


        <ProgressBar
            android:id="@+id/status_image"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:statusData="@{viewModel.status}" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:text="@string/back_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>
